Implements auth bearer
