# api/swagger.json
@@ -23,6 +23,11 @@
         },
         "/api/v1/categories": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Find all categories",
                 "produces": [
                     "application/json"
@@ -44,6 +49,31 @@
                 }
             }
         },
+        "/api/v1/current/user": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Find user logged",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "User Logged",
+                "responses": {
+                    "200": {
+                        "description": "User",
+                        "schema": {
+                            "$ref": "#/definitions/handler.UserResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/signin": {
             "post": {
                 "description": "Login user",
@@ -54,7 +84,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User | SignIn"
+                    "Sign In"
                 ],
                 "summary": "Sign In",
                 "parameters": [
@@ -84,8 +114,11 @@
                 "consumes": [
                     "application/json"
                 ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
-                    "User | SignUp"
+                    "Sign Up"
                 ],
                 "summary": "Sign Up",
                 "parameters": [
@@ -111,6 +144,11 @@
         },
         "/api/v1/tasks": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Find all tasks",
                 "produces": [
                     "application/json"
@@ -132,6 +170,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create new Task",
                 "consumes": [
                     "application/json"
@@ -166,6 +209,11 @@
         },
         "/api/v1/tasks/{uuid}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Find one task by UUID",
                 "produces": [
                     "application/json"
@@ -193,6 +241,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete task by UUID",
                 "tags": [
                     "Task"
@@ -216,6 +269,11 @@
         },
         "/api/v1/tasks/{uuid}/done": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update task as done",
                 "tags": [
                     "Task"
@@ -239,6 +297,11 @@
         },
         "/api/v1/tasks/{uuid}/undone": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update task as undone",
                 "tags": [
                     "Task"
@@ -347,6 +410,30 @@
                     "type": "string"
                 }
             }
+        },
+        "handler.UserResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
